githubページのURLを追加。

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 					<p class="sp12">時間の合間に追記をしているため全ての内容の反映までに時間がかかっています。</p>
 					<p class="sp12">よろしければ参考にしてくださいね。</p>
 					<hr>
+					<p class="sp12">協力していただける方は『<a href="https://github.com/8pnfd/grst">コチラ</a>』より現在のソースコードを取得してください。</p>
+					<hr>
 					<p class="sp20">更新履歴</p>
 					<div class="log">
 					<p class="sp12">2024/05/28 18:36</p>
