--- a/hero.html
+++ b/hero.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -53,7 +53,7 @@
 			
 			<div id="explanation">
 				<div class="explanation_in">
-					<p class="sp20">主人公</p>
+					<p class="sp20" id="hero">主人公</p>
 					<hr>
 					<p class="sp12">主にプレイヤー自身の強化をすることが出来ます。</p>
 					<p class="sp12">大きく分けて『装備』『転職』『スキル』『装飾』の4つに別れています。</p>
@@ -204,6 +204,7 @@
 				
 				<div class="explanation_menu">
 					<nav>
+						<p class="sp16"><a href="#hero">・主人公</a></p>
 						<p class="sp16"><a href="#equipment">・装備</a></p>
 						<p class="sp12"><a href="#demon">附魔</a> / <a href="#rank_master">ランクマスター</a><br>
 						<a href="#hero_status">主人公ステータス</a> / <a href="#training">修行</a></p>
