--- a/support.html
+++ b/support.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -53,7 +53,75 @@
 			
 			<div id="explanation">
 				<div class="explanation_in">
-					<p class="sp20">サポート(準備中)</p>
+					<p class="sp20" id="support">サポート(準備中)</p>
+					<hr>
+					<p class="sp12">サポートはお友達の代わりに編成できるペットみたいな立ち位置になります。</p>
+					<p class="sp12">最大5匹まで編成することが可能で、お友達と違い倒されれば次のサポートが戦闘に入ります。</p>
+					<p class="sp12">この仕組みを利用することで最大4ターン伸ばすことができます。</p>
+					<hr>
+					<p class="sp16" id="ssr">SSR</p>
+					<hr>
+					<p class="sp16" id="koparu_no_daijin">・コパールの大臣</p>
+					<hr>
+					<p class="sp16" id="satanachia">・サタナチア</p>
+					<hr>
+					<p class="sp16" id="zamudein">・ザムディン</p>
+					<hr>
+					<p class="sp16" id="mogeru">・モゲル</p>
+					<hr>
+					<p class="sp16" id="monku">・モンク</p>
+					<hr>
+					<p class="sp16" id="sssr">SSSR</p>
+					<hr>
+					<p class="sp16" id="kasegi_gorudo">・カセギゴールド</p>
+					<hr>
+					<p class="sp16" id="kitaji">・キタジ</p>
+					<hr>
+					<p class="sp16" id="saikyo_daijin">・最強大臣</p>
+					<hr>
+					<p class="sp16" id="suisho_obaba">・水晶オババ</p>
+					<hr>
+					<p class="sp16" id="dema">・デマ</p>
+					<hr>
+					<p class="sp16" id="minaji">・ミナジ</p>
+					<hr>
+					<p class="sp16" id="ur">UR</p>
+					<hr>
+					<p class="sp16" id="vivian">・ヴィヴィアン</p>
+					<hr>
+					<p class="sp16" id="otoko_no_doragon">・漢のドラゴン</p>
+					<hr>
+					<p class="sp16" id="garuriro">・ガルリロ</p>
+					<hr>
+					<p class="sp16" id="donkama">・ドンカマー</p>
+					<hr>
+					<p class="sp16" id="nishiji">・ニシジ</p>
+					<hr>
+					<p class="sp16" id="higaji">・ヒガジ</p>
+					<hr>
+					<p class="sp16" id="lr">LR</p>
+					<hr>
+					<p class="sp16" id="adamusuki">・アダムスキー</p>
+					<hr>
+					<p class="sp16" id="kaze_no_o">・風の王</p>
+					<hr>
+					<p class="sp16" id="kaya">・カヤ</p>
+					<hr>
+					<p class="sp16" id="juju_inu">・ジュジュ(犬)</p>
+					<hr>
+					<p class="sp16" id="chi_no_o_okan">・地の王(王冠)</p>
+					<hr>
+					<p class="sp16" id="derida">・デリダ</p>
+					<hr>
+					<p class="sp16" id="hi_no_o">・火の王</p>
+					<hr>
+					<p class="sp16" id="pukapuka_doragon">・プカプカドラゴン</p>
+					<hr>
+					<p class="sp16" id="mao_giri">・魔王ギリ</p>
+					<hr>
+					<p class="sp16" id="mizu_no_o">・水の王</p>
+					<hr>
+					<p class="sp16" id="wanchin_shin">・ワンチン(真)</p>
 					<!--
 					<hr>
 					<p class="sp16" id="">・</p>
@@ -68,6 +136,44 @@
 				
 				<div class="explanation_menu">
 					<nav>
+						<p class="sp16"><a href="#support">・サポート</a></p>
+						<p class="sp16"><a href="#ssr">・SSR</a></p>
+						<p class="sp12m">
+							<a href="#koparu_no_daijin">コパールの大臣</a> / <a href="#satanachia">サタナチア</a>
+						</p>
+						<p class="sp12e">
+							<a href="#zamudein">ザムディン</a> / <a href="#mogeru">モゲル</a> / <a href="#monku">モンク</a>
+						</p>
+						<p class="sp16"><a href="#sssr">・SSSR</a></p>
+						<p class="sp12m">
+							<a href="#kasegi_gorudo">カセギゴールド</a> / <a href="#kitaji">キタジ</a> / <a href="#saikyo_daijin">最強大臣</a>
+						</p>
+						<p class="sp12e">
+							<a href="#suisho_obaba">水晶オババ</a> / <a href="#dema">デマ</a> / <a href="#minaji">ミナジ</a>
+						</p>
+						<p class="sp16"><a href="#ur">・UR</a></p>
+						<p class="sp12m">
+							<a href="#vivian">ヴィヴィアン</a> / <a href="#otoko_no_doragon">漢のドラゴン</a>
+						</p>
+						<p class="sp12m">
+							<a href="#garuriro">ガルリロ</a> / <a href="#donkama">ドンカマー</a> / <a href="#nishiji">ニシジ</a>
+						</p>
+						<p class="sp12e">
+							<a href="#higaji">ヒガジ</a>
+						</p>
+						<p class="sp16"><a href="#lr">・LR</a></p>
+						<p class="sp12m">
+							<a href="#adamusuki">アダムスキー</a> / <a href="#kaze_no_o">風の王</a> / <a href="#kaya">カヤ</a>
+						</p>
+						<p class="sp12m">
+							<a href="#juju_inu">ジュジュ(犬)</a> / <a href="#chi_no_o_okan">地の王(王冠)</a> / <a href="#derida">デリダ</a></a>
+						</p>
+						<p class="sp12m">
+							<a href="#hi_no_o">火の王</a> / <a href="#pukapuka_doragon">プカプカドラゴン</a>
+						</p>
+						<p class="sp12m">
+							<a href="#mao_giri">魔王ギリ</a> / <a href="#king_water">水の王</a> / <a href="#wanchin_shin">ワンチン(真)</a>
+						</p>
 						<!--
 						<p class="sp16"><a href="#">・</a></p>
 						<p class="sp16"><a href="#">・</a></p>
