--- a/begin.html
+++ b/begin.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -53,7 +53,7 @@
 			
 			<div id="explanation">
 				<div class="explanation_in">
-					<p class="sp20">初めに知っておいた方が良い事</p>
+					<p class="sp20" id="begin">初めに知っておこう</p>
 					<hr>
 					<p class="sp16" id="game_specification">・ゲームの仕様</p>
 					<p class="sp12">この手のゲームは、複数サーバーが用意されます。</p>
@@ -125,6 +125,7 @@
 				</div>
 				<div class="explanation_menu">
 					<nav>
+						<p class="sp16"><a href="#begin">・初めに知っておこう</a></p>
 						<p class="sp16"><a href="#game_specification">・ゲームの仕様</a></p>
 						<p class="sp16"><a href="#server">・サーバー変更手順</a></p>
 						<p class="sp16"><a href="#g123_specification">・G123の仕様について</a></p>
