--- a/forging.html
+++ b/forging.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -53,7 +53,10 @@
 			
 			<div id="explanation">
 				<div class="explanation_in">
-					<p class="sp20">鍛造(準備中)</p>
+					<p class="sp20" id="forging">鍛造(準備中)</p>
+					<hr>
+					<p class="sp12">戦闘等で手に入れた装備を強化(ランクアップ)することができます。</p>
+					<p class="sp12">また、指輪も同様に強化(ランクアップ)することができます。</p>
 					<!--
 					<hr>
 					<p class="sp16" id="">・</p>
@@ -68,6 +71,7 @@
 				
 				<div class="explanation_menu">
 					<nav>
+						<p class="sp16"><a href="#forging">・鍛造</a></p>
 						<!--
 						<p class="sp16"><a href="#">・</a></p>
 						<p class="sp16"><a href="#">・</a></p>
