--- a/friend.html
+++ b/friend.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -53,7 +53,103 @@
 			
 			<div id="explanation">
 				<div class="explanation_in">
-					<p class="sp20">お友達(準備中)</p>
+					<p class="sp20" id="friend">お友達(準備中)</p>
+					<hr>
+					<p class="sp12">お友達はグルスタで敵と戦うためのメンバーです。</p>
+					<p class="sp12">最大8人まで編成することが可能です。</p>
+					<p class="sp12">前衛に回復のお友達、後衛にアタッカーのお友達を編成すると長く戦えます。</p>
+					<hr>
+					<p class="sp16" id="sr">SR</p>
+					<hr>
+					<p class="sp16" id="lakan">・ラカン</p>
+					<hr>
+					<p class="sp16" id="ssr">SSR</p>
+					<hr>
+					<p class="sp16" id="kita_no_machi_no_chocho">・キタの町の町長</p>
+					<hr>
+					<p class="sp16" id="zaza">・ザザ</p>
+					<hr>
+					<p class="sp16" id="bajani">・バジャーニ</p>
+					<hr>
+					<p class="sp16" id="bado">・バド</p>
+					<hr>
+					<p class="sp16" id="miucha">・ミウチャ</p>
+					<hr>
+					<p class="sp16" id="repia">・レピア</p>
+					<hr>
+					<p class="sp16" id="sssr">SSSR</p>
+					<hr>
+					<p class="sp16" id="iruku">・イルク</p>
+					<hr>
+					<p class="sp16" id="gatari">・ガタリ</p>
+					<hr>
+					<p class="sp16" id="kitakita_yosei">・キタキタ(妖精)</p>
+					<hr>
+					<p class="sp16" id="kitakita_oyaji">・キタキタおやじ</p>
+					<hr>
+					<p class="sp16" id="kukuri">・ククリ</p>
+					<hr>
+					<p class="sp16" id="kukuri_kemomimi">・ククリ(ケモミミ)</p>
+					<hr>
+					<p class="sp16" id="kukuri_shugi">・ククリ(シュギ)</p>
+					<hr>
+					<p class="sp16" id="kodai_o">・コーダイ王</p>
+					<hr>
+					<p class="sp16" id="gochinko">・ゴチンコ</p>
+					<hr>
+					<p class="sp16" id="surai">・スライ</p>
+					<hr>
+					<p class="sp16" id="dokido">・ドキド</p>
+					<hr>
+					<p class="sp16" id="toma">・トマ</p>
+					<hr>
+					<p class="sp16" id="nike_shugi">・ニケ(シュギ)</p>
+					<hr>
+					<p class="sp16" id="migu">・ミグ</p>
+					<hr>
+					<p class="sp16" id="miruka">・ミルカ</p>
+					<hr>
+					<p class="sp16" id="rajini">・ラジニ</p>
+					<hr>
+					<p class="sp16" id="runrun">・ルンルン</p>
+					<hr>
+					<p class="sp16" id="reido">・レイド</p>
+					<hr>
+					<p class="sp16" id="ur">UR</p>
+					<hr>
+					<p class="sp16" id="gurieru">・グリエル</p>
+					<hr>
+					<p class="sp16" id="juju">・ジュジュ</p>
+					<hr>
+					<p class="sp16" id="nike">・ニケ</p>
+					<hr>
+					<p class="sp16" id="nike_kemomimi">・ニケ(ケモミミ)</p>
+					<hr>
+					<p class="sp16" id="puranano_yojo">・プラナノ(幼女)</p>
+					<hr>
+					<p class="sp16" id="wanchin">・ワンチン</p>
+					<hr>
+					<p class="sp16" id="lr">LR</p>
+					<hr>
+					<p class="sp16" id="akuma_kukuri">・悪魔ククリ</p>
+					<hr>
+					<p class="sp16" id="kitakita_kusasobi">・キタキタ(草装備)</p>
+					<hr>
+					<p class="sp16" id="juju_kessen">・ジュジュ(決戦)</p>
+					<hr>
+					<p class="sp16" id="toma_magishi">・トマ(魔技師)</p>
+					<hr>
+					<p class="sp16" id="nike_oji">・ニケ王子</p>
+					<hr>
+					<p class="sp16" id="puranano">・プラナノ</p>
+					<hr>
+					<p class="sp16" id="puranano_ojo">・プラナノ(王女)</p>
+					<hr>
+					<p class="sp16" id="purinsesu_kukuri">・プリンセスククリ</p>
+					<hr>
+					<p class="sp16" id="runrun_kopa">・ルンルン(コパ)</p>
+					<hr>
+					<p class="sp16" id="reido_kokiyoroi">・レイド(古器鎧)</p>
 					<!--
 					<hr>
 					<p class="sp16" id="">・</p>
@@ -68,6 +164,62 @@
 				
 				<div class="explanation_menu">
 					<nav>
+						<p class="sp16"><a href="#friend">・お友達</a></p>
+						<p class="sp16"><a href="#sr">・SR</a></p>
+						<p class="sp12e"><a href="#lakan">ラカン</a></p>
+						<p class="sp16"><a href="#ssr">・SSR</a></p>
+						<p class="sp12m">
+							<a href="#kita_no_machi_no_chocho">キタの町の町長</a> / <a href="#zaza">ザザ</a> / <a href="#bajani">バジャーニ</a>
+						</p>
+						<p class="sp12e">
+							<a href="#bado">バド</a> / <a href="#miucha">ミウチャ</a> / <a href="#repia">レピア</a>
+						</p>
+						<p class="sp16"><a href="#sssr">・SSSR</a></p>
+						<p class="sp12m">
+							<a href="#iruku">イルク</a> / <a href="#gatari">ガタリ</a> / <a href="#kitakita_yosei">キタキタ(妖精)</a>
+						</p>
+						<p class="sp12m">
+							<a href="#kitakita_oyaji">キタキタおやじ</a> / <a href="#kukuri">ククリ</a>
+						</p>
+						<p class="sp12m">
+							<a href="#kukuri_kemomimi">ククリ(ケモミミ)</a> / <a href="#kukuri_shugi">ククリ(シュギ)</a>
+						</p>
+						<p class="sp12m">
+							<a href="#kodai_o">コーダイ王</a> / <a href="#gochinko">ゴチンコ</a> / <a href="#surai">スライ</a>
+						</p>
+						<p class="sp12m">
+							<a href="#dokido">ドキド</a> / <a href="#toma">トマ</a> / <a href="#nike_shugi">ニケ(シュギ)</a> / <a href="#migu">ミグ</a>
+						</p>
+						<p class="sp12e">
+							<a href="#miruka">ミルカ</a> / <a href="#rajini">ラジニ</a> / <a href="#runrun">ルンルン</a> / <a href="#reido">レイド</a>
+						</p>
+						<p class="sp16"><a href="#ur">・UR</a></p>
+						<p class="sp12m">
+							<a href="#gurieru">グリエル</a> / <a href="#juju">ジュジュ</a> / <a href="#nike">ニケ</a>
+						</p>
+						<p class="sp12m">
+							<a href="#nike_kemomimi">ニケ(ケモミミ)</a> / <a href="#puranano_yojo">プラナノ(幼女)</a>
+						</p>
+						<p class="sp12e">
+							<a href="#wanchin">ワンチン</a>
+						</p>
+						<p class="sp16"><a href="#lr">・LR</a></p>
+						<p class="sp12m">
+							<a href="#akuma_kukuri">悪魔ククリ※</a> / <a href="#kitakita_kusasobi">キタキタ(草装備)</a>
+						</p>
+						<p class="sp12m">
+							<a href="#juju_kessen">ジュジュ(決戦)</a> / <a href="#toma_magishi">トマ(魔技師)</a>
+						</p>
+						<p class="sp12m">
+							<a href="#nike_oji">ニケ王子</a> / <a href="#puranano">プラナノ</a>
+						</p>
+						<p class="sp12m">
+							<a href="#puranano_ojo">プラナノ(王女)※</a> / <a href="#purinsesu_kukuri">プリンセスククリ</a>
+						</p>
+						<p class="sp12e">
+							<a href="#runrun_kopa">ルンルン(コパ)</a> / <a href="#reido_kokiyoroi">レイド(古器鎧)</a>
+						</p>
+						<p class="sp12">※は限定お友達です。</p>
 						<!--
 						<p class="sp16"><a href="#">・</a></p>
 						<p class="sp16"><a href="#">・</a></p>
