--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -205,7 +205,7 @@
 						<p class="sp12m"><a href="#system_set">システム設定</a> / <a href="#name_change">名前変更</a> / <a href="#occu_change">職業変更</a></p>
 						<p class="sp12m"><a href="#server_change">サーバー変更</a> / <a href="#language_change">言語変更</a></p>
 						<p class="sp12m"><a href="#frame_change">フレーム変更</a> / <a href="#vip">VIP&栄光</a> / <a href="#vip_benefits">VIP特典</a></p>
-						<p class="sp12m"><a href="#glory_benefits">栄光特典</a></p>
+						<p class="sp12e"><a href="#glory_benefits">栄光特典</a></p>
 						<!--
 						<p class="sp16"><a href="#">・</a></p>
 						<p class="sp16"><a href="#">・</a></p>
