--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2405291400">
+		<link rel="stylesheet" href="css/style.css?2405301400">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -54,13 +54,8 @@
 			<div id="explanation">
 				<div class="explanation_in">
 					<p class="sp20">魔法陣グルグル ほしくず大冒険(グルスタ) helpへようこそ</p>
-					<p class="sp12">最終更新：2024/05/29 14:00</p>
-					<p class="sp12">▶ 『トップ』ページのレイアウトを修正しました。</p>
-					<p class="sp12">▶ 『トップ』ページのSpecial Thanksの位置を変更及び追記しました。</p>
-					<p class="sp12">▶ 『主人公』ページのレイアウトを修正しました。</p>
-					<p class="sp12">▶ 『ホーム』ページのレイアウトを修正しました。</p>
-					<p class="sp12">▶ G123の著作物利用ガイドラインに沿ったページに修正しました。</p>
-					<p class="sp12">▶ 一部CSSの修正及び削除をしました。</p>
+					<p class="sp12">最終更新：2024/05/30 14:00</p>
+					<p class="sp12">▶ 各ページに簡単な説明を追記しました。</p>
 					<hr>
 					<p class="sp12">このサイトは『魔法陣グルグル ほしくず大冒険』略してグルスタのhelpサイトです。</p>
 					<p class="sp12">ゲームをプレイするにあたって最初の方しか説明がなくどう遊んでいけば良いのかが</p>
@@ -72,6 +67,13 @@
 					<hr>
 					<p class="sp20">更新履歴</p>
 					<div class="log">
+					<p class="sp12">2024/05/29 14:00</p>
+					<p class="sp12">▶ 『トップ』ページのレイアウトを修正しました。</p>
+					<p class="sp12">▶ 『トップ』ページのSpecial Thanksの位置を変更及び追記しました。</p>
+					<p class="sp12">▶ 『主人公』ページのレイアウトを修正しました。</p>
+					<p class="sp12">▶ 『ホーム』ページのレイアウトを修正しました。</p>
+					<p class="sp12">▶ G123の著作物利用ガイドラインに沿ったページに修正しました。</p>
+					<p class="sp12">▶ 一部CSSの修正及び削除をしました。</p>
 					<p class="sp12">2024/05/28 18:36</p>
 					<p class="sp12">▶ 『初めに』ページに追従メニューを追加しました。</p>
 					</div>
