ワンチンのスキルの誤字修正

--- a/friend.html
+++ b/friend.html
@@ -4248,7 +4248,7 @@
 							<td><img class="skill" src="img/skill/kotei/ur/ur_06_gugenka_maho.png" width="60px"></td>
 							<td><p class="sp12t">固定<br>専用スキル</p></td>
 							<td><p class="sp12t">531</p></td>
-							<td><p class="sp12t">具現化魔法br>最大Lv.15</p></td>
+							<td><p class="sp12t">具現化魔法<br>最大Lv.15</p></td>
 							<!-- TODO 攻撃陣ってなんやねん -->
 							<td><p class="sp12t">ランダムな味方4体の会心ダメージ<font class="number">+22%</font>、攻撃力<font class="number">+10%</font>。毎ターン最も攻撃力が高い味方に【必殺】効果(攻撃陣『時』のダメージ<font class="number">+150%</font>)を与える、効果1ターン</p></td>
 						</tr>
