協力者の名前修正

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 			<div id="explanation">
 				<div class="explanation_in">
 					<p class="sp20">魔法陣グルグル ほしくず大冒険(グルスタ) helpへようこそ</p>
-					<p class="sp12">最終更新：2024/06/04 22:15</p>
-					<p class="sp12">▶ お友達ページを更新しました。</p>
-					<p class="sp12">▶ 一部デザインを修正しました。</p>
+					<p class="sp12">最終更新：2024/06/06 11:30</p>
+					<p class="sp12">▶ 協力者の名前を誤字っていたので修正しました。</p>
+					<p class="sp12">▶ 申し訳ございません。</p>
 					<hr>
 					<p class="sp12">このサイトは『魔法陣グルグル ほしくず大冒険』略してグルスタのhelpサイトです。</p>
 					<p class="sp12">ゲームをプレイするにあたって最初の方しか説明がなくどう遊んでいけば良いのかが</p>
@@ -68,6 +68,9 @@
 					<hr>
 					<p class="sp20">更新履歴</p>
 					<div class="log">
+						<p class="sp12">2024/06/04 22:15</p>
+						<p class="sp12">▶ お友達ページを更新しました。</p>
+						<p class="sp12">▶ 一部デザインを修正しました。</p>
 						<p class="sp12t">2024/05/30 14:00</p>
 						<p class="sp12t">▶ 各ページに簡単な説明を追記しました。</p>
 						<p class="sp12t">2024/05/29 14:00</p>
@@ -86,7 +89,7 @@
 					<nav>
 					<p class="sp20">Special Thanks</p>
 					<p class="sp12">ギルド『魔法陣』メンバー / kaito<br>
-					耶律阿保機 / メラ / ミヤジ / akira366</p>
+					耶律阿保機 / メラ / ミヤジ / akira365</p>
 					<br>
 					<p class="sp12">上記の方にもご協力を頂いています。</p>
 					<!--
