新規LRお友達を追加

--- a/home.html
+++ b/home.html
@@ -253,6 +253,8 @@
 					scrollspeedanimate: 10,									//カーソル移動時の拡大画像の追従速度
 					zoomrange: [1, 10],										//ズームのレンジ 1-10倍
 					zoomstart: 4,											//ズームの開始値
+					magnifierpos: "left", // 元画像の位置(コンテナの位置)
+					innerzoom: false
 				});
 			});
 		</script>
