--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="img/icon-192x192.png">
-		<link rel="stylesheet" href="css/style.css?2406042211">
+		<link rel="stylesheet" href="css/style.css?2406302300">
 		<link rel="stylesheet" href="css/bootstrap.min.3.3.4.css">
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/zoomsl.min.js"></script>
@@ -54,9 +54,9 @@
 			<div id="explanation">
 				<div class="explanation_in">
 					<p class="sp20">魔法陣グルグル ほしくず大冒険(グルスタ) helpへようこそ</p>
-					<p class="sp12">最終更新：2024/06/06 11:30</p>
-					<p class="sp12">▶ 協力者の名前を誤字っていたので修正しました。</p>
-					<p class="sp12">▶ 申し訳ございません。</p>
+					<p class="sp12">最終更新：2024/06/30 23:00</p>
+					<p class="sp12">▶ 新規LRのお友達を追加しました。</p>
+					<p class="sp12">▶ 各お友達の漫画、アニメの登場箇所を追加しました。</p>
 					<hr>
 					<p class="sp12">このサイトは『魔法陣グルグル ほしくず大冒険』略してグルスタのhelpサイトです。</p>
 					<p class="sp12">ゲームをプレイするにあたって最初の方しか説明がなくどう遊んでいけば良いのかが</p>
@@ -68,9 +68,12 @@
 					<hr>
 					<p class="sp20">更新履歴</p>
 					<div class="log">
-						<p class="sp12">2024/06/04 22:15</p>
-						<p class="sp12">▶ お友達ページを更新しました。</p>
-						<p class="sp12">▶ 一部デザインを修正しました。</p>
+						<p class="sp12t">2024/06/06 11:30</p>
+						<p class="sp12t">▶ 協力者の名前を誤字っていたので修正しました。</p>
+						<p class="sp12t">▶ 申し訳ございません。</p>
+						<p class="sp12t">2024/06/04 22:15</p>
+						<p class="sp12t">▶ お友達ページを更新しました。</p>
+						<p class="sp12t">▶ 一部デザインを修正しました。</p>
 						<p class="sp12t">2024/05/30 14:00</p>
 						<p class="sp12t">▶ 各ページに簡単な説明を追記しました。</p>
 						<p class="sp12t">2024/05/29 14:00</p>
@@ -88,7 +91,7 @@
 				<div class="explanation_menu">
 					<nav>
 					<p class="sp20">Special Thanks</p>
-					<p class="sp12">ギルド『魔法陣』メンバー / kaito<br>
+					<p class="sp12">S27ギルド『魔法陣』メンバー / kaito<br>
 					耶律阿保機 / メラ / ミヤジ / akira365</p>
 					<br>
 					<p class="sp12">上記の方にもご協力を頂いています。</p>
