天使ニケ、ククリの修正

--- a/friend/friend_lr.html
+++ b/friend/friend_lr.html
@@ -2922,7 +2922,8 @@
 					<hr>
 					<p class="sp16" id="tenshi_kukuri">・天使ククリ(70170) / 凍属性 / ダメージ(減速ダメージ増加)</p>
 					<p class="sp12">入手方法 ▶ 伝説の泉2段階目 / S2・LRのオーブ / 他</p>
-					<p class="sp12">登場箇所 ▶ 魔法陣グルグル(11巻)第144章「ギリの城へ①」 / アニメ3期 17話「鳴らせ！エルエル村！」</p>
+					<p class="sp12">漫画登場箇所　 ▶ ???</p>
+					<p class="sp12">アニメ登場箇所 ▶ ???</p>
 					<img src="../img/friend/lr/tenshi_kukuri.jpg" width="655px">
 					<table>
 						<tr>
@@ -3094,7 +3095,8 @@
 					<hr>
 					<p class="sp16" id="tenshi_nike">・天使ニケ(70170) / 攻属性 / ダメージ(突撃連撃)</p>
 					<p class="sp12">入手方法 ▶ 伝説の泉2段階目 / S2・LRのオーブ / 他</p>
-					<p class="sp12">登場箇所 ▶ 第章(魔法陣グルグル巻)</p>
+					<p class="sp12">漫画登場箇所　 ▶ ???</p>
+					<p class="sp12">アニメ登場箇所 ▶ ???</p>
 					<img src="../img/friend/lr/tenshi_nike.jpg" width="655px">
 					<table>
 						<tr>
