天使ククリ情報の更新

--- a/friend/friend_lr.html
+++ b/friend/friend_lr.html
@@ -2922,8 +2922,8 @@
 					<hr>
 					<p class="sp16" id="tenshi_kukuri">・天使ククリ(70170) / 凍属性 / ダメージ(減速ダメージ増加)</p>
 					<p class="sp12">入手方法 ▶ 伝説の泉2段階目 / S2・LRのオーブ / 他</p>
-					<p class="sp12">漫画登場箇所　 ▶ ???</p>
-					<p class="sp12">アニメ登場箇所 ▶ ???</p>
+					<p class="sp12">漫画登場箇所　 ▶ 魔法陣グルグル(8巻)第59章「コパールにて」</p>
+					<p class="sp12">アニメ登場箇所 ▶ 2期 18話-A「ソロソロ侵入コパール城！」 / 3期 11話-B「弟子入り！コパの森！」</p>
 					<img src="../img/friend/lr/tenshi_kukuri.jpg" width="655px">
 					<table>
 						<tr>
