キタキタおやじの漫画登場箇所を修正

--- a/friend/friend_sssr.html
+++ b/friend/friend_sssr.html
@@ -628,7 +628,7 @@
 					<hr>
 					<p class="sp16" id="kitakita_oyaji">・キタキタおやじ(44170) / 心属性 / タンク(防御援護)</p>
 					<p class="sp12">入手方法 ▶ 友情魔法陣 / 高級魔法陣 / 指定お友達召喚 / 指定属性お友達召喚 / SSSRオーブ</p>
-					<p class="sp12">漫画登場箇所　 ▶ 魔法陣グルグル(5巻)33章「ガタリ様登場」</p>
+					<p class="sp12">漫画登場箇所　 ▶ 魔法陣グルグル(1巻)5章「キタの町・1」</p>
 					<p class="sp12">アニメ登場箇所 ▶ 1期 3話-B「強敵モンスターと初対決！」 / 3期 2話-A「踊れ！キタの町！」</p>
 					<img src="../img/friend/sssr/kitakita_oyaji.jpg" width="655px">
 					<table>
