天使ニケの漫画とアニメの登場箇所の更新

--- a/friend/friend_lr.html
+++ b/friend/friend_lr.html
@@ -3095,8 +3095,10 @@
 					<hr>
 					<p class="sp16" id="tenshi_nike">・天使ニケ(70170) / 攻属性 / ダメージ(突撃連撃)</p>
 					<p class="sp12">入手方法 ▶ 伝説の泉2段階目 / S2・LRのオーブ / 他</p>
-					<p class="sp12">漫画登場箇所　 ▶ ???</p>
-					<p class="sp12">アニメ登場箇所 ▶ ???</p>
+					<p class="sp12">漫画登場箇所　 ▶ 魔法陣グルグル(10巻)第89章「歌って踊って大決戦！」</p>
+					<p class="sp12">　　　　　　　 ▶ ※原作に天使ニケの描写はありません。</p>
+					<p class="sp12">アニメ登場箇所 ▶ 2期 34話-A「げきげき大作戦！歌って踊って」 / 3期 16話-A「守れ！パンフォスの遺跡！」</p>
+					<p class="sp12">　　　　　　　 ▶ ※2期に天使ニケの描写はありません。3期オリジナル要素です。</p>
 					<img src="../img/friend/lr/tenshi_nike.jpg" width="655px">
 					<table>
 						<tr>
