--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 			<div id="explanation">
 				<div class="explanation_in">
 					<p class="sp20">魔法陣グルグル ほしくず大冒険(グルスタ) helpへようこそ</p>
-					<p class="sp12">最終更新：2024/06/30 23:00</p>
-					<p class="sp12">▶ 新規LRのお友達を追加しました。</p>
-					<p class="sp12">▶ 各お友達の漫画、アニメの登場箇所を追加しました。</p>
+					<p class="sp12">最終更新：2024/07/01 22:30</p>
+					<p class="sp12">▶ 天使ニケの漫画、アニメの登場箇所を更新しました。</p>
 					<hr>
 					<p class="sp12">このサイトは『魔法陣グルグル ほしくず大冒険』略してグルスタのhelpサイトです。</p>
 					<p class="sp12">ゲームをプレイするにあたって最初の方しか説明がなくどう遊んでいけば良いのかが</p>
@@ -68,6 +67,9 @@
 					<hr>
 					<p class="sp20">更新履歴</p>
 					<div class="log">
+						<p class="sp12t">2024/06/30 23:00</p>
+						<p class="sp12t">▶ 新規LRのお友達を追加しました。</p>
+						<p class="sp12t">▶ 各お友達の漫画、アニメの登場箇所を追加しました。</p>
 						<p class="sp12t">2024/06/06 11:30</p>
 						<p class="sp12t">▶ 協力者の名前を誤字っていたので修正しました。</p>
 						<p class="sp12t">▶ 申し訳ございません。</p>
