よくある質問のページを追加

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			<div id="explanation">
 				<div class="explanation_in">
 					<p class="sp20">魔法陣グルグル ほしくず大冒険(グルスタ) helpへようこそ</p>
-					<p class="sp12">最終更新：2024/07/01 22:30</p>
-					<p class="sp12">▶ 天使ニケの漫画、アニメの登場箇所を更新しました。</p>
+					<p class="sp12">最終更新：2024/07/03 18:00</p>
+					<p class="sp12">▶ よくある質問のページを作成しました。</p>
 					<hr>
 					<p class="sp12">このサイトは『魔法陣グルグル ほしくず大冒険』略してグルスタのhelpサイトです。</p>
 					<p class="sp12">ゲームをプレイするにあたって最初の方しか説明がなくどう遊んでいけば良いのかが</p>
@@ -67,6 +67,8 @@
 					<hr>
 					<p class="sp20">更新履歴</p>
 					<div class="log">
+						<p class="sp12t">2024/07/01 22:30</p>
+						<p class="sp12t">▶ 天使ニケの漫画、アニメの登場箇所を更新しました。</p>
 						<p class="sp12t">2024/06/30 23:00</p>
 						<p class="sp12t">▶ 新規LRのお友達を追加しました。</p>
 						<p class="sp12t">▶ 各お友達の漫画、アニメの登場箇所を追加しました。</p>
@@ -97,6 +99,8 @@
 					耶律阿保機 / メラ / ミヤジ / akira365</p>
 					<br>
 					<p class="sp12">上記の方にもご協力を頂いています。</p>
+					<p class="sp16">----------</p>
+					<p class="sp16"><a href="faq.html">・よくある質問</a></p>
 					<!--
 					<p class="sp16"><a href="#">・</a></p>
 					<p class="sp16"><a href="#">・</a></p>
